# estudos-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py  test_main.py
notebooks/: 01_fundamentos.ipynb  02_controle_de_fluxo.ipynb  03_estruturas_de_dados.ipynb  04_funcoes.ipynb  05_strings.ipynb  06_erros_e_excecoes.ipynb  07_orientacao_a_objetos.ipynb  08_modulos_e_pacotes.ipynb  09_arquivos_csv_json.ipynb  10_pythonic.ipynb  11_biblioteca_padrao.ipynb  12_testes_automatizados.ipynb  13_consumindo_apis.ipynb  14_construindo_uma_api.ipynb
scripts/: validar_notebooks.py
